infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: istioapp-service
  labels:
    app: istioapp
spec:
  selector:
    app: istioapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
