infra/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istioapp-virtualservice
spec:
  hosts:
    - istioapp.default.svc.cluster.local
  http:
    - route:
        - destination:
            host: istioapp.default.svc.cluster.local
            subset: v1
          weight: 100
      mirror:
        host: istioapp.default.svc.cluster.local
        subset: v2
      mirrorPercentage:
        value: 100
